--- a/app/views/post_attachments/_form.html.haml
+++ b/app/views/post_attachments/_form.html.haml
@@ -1,19 +1,8 @@
+= image_tag @post_attachment.photo
 = form_for(@post_attachment) do |f|
-  - if @post_attachment.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@post_attachment.errors.count, "error")
-        prohibited this post_attachment from being saved:
-      %ul
-        - @post_attachment.errors.full_messages.each do |message|
-          %li= message
-  .field
-    = f.label :post_id
-    %br/
-    = f.number_field :post_id
   .field
     = f.label :photo
     %br/
-    = f.text_field :photo
+    = f.file_field :photo
   .actions
     = f.submit
