--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,6 +2,9 @@
 %p
   %strong Title:
   = @post.title
+- @post_attachments.each do |p|
+  = image_tag p.photo_url
+  = link_to "Edit Attachment", edit_post_attachment_path(p)
 = link_to 'Edit', edit_post_path(@post)
 |
-= link_to 'Back', posts_path
+\#{link_to 'Back', posts_path}
